--- a/unit_15/css/mediaqueries.css
+++ b/unit_15/css/mediaqueries.css
@@ -39,9 +39,9 @@
     }
 
 	.project {
-		/*display: block;*/
+		display: block;
 		width: 40%;
-		margin: .5 auto;
+		margin: .5em auto;
 	}
 
 	#logo {
